hphp/test/slow/using/bad-lambda2.php.expectf
Fatal error: Call to undefined method Closure$%S;%d::__dispose() in %s/test/slow/using/bad-lambda2.php on line 3
